--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^5.4.2",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -27,6 +28,8 @@
     "react-spinners": "^0.13.8",
     "swr": "^2.1.3",
     "tailwindcss": "3.3.1",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "typescript": "5.0.4"
   }
 }
